--- a/CurriculaService/src/main/resources/application.yml
+++ b/CurriculaService/src/main/resources/application.yml
@@ -1,10 +1,4 @@
-logging:
-  level:
-    org:
-      hibernate: INFO
-      springframework:
-        web: DEBUG
-    root: ALL
+
 spring:
   profiles:
     active: ${DEPLOYMENT_STAGE:dev}
@@ -17,21 +11,17 @@ spring:
 spring:
   profiles: dev    
   datasource:
-    driverClassName: org.postgresql.Driver
-    initialization-mode: NEVER
-    password: ${DB_PASSWORD}
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    
+    driverClassName: org.h2.Driver
+    platform: h2
+    url: jdbc:h2:mem:curricula;Mode=PostgreSQL
+    initilize: true
+  h2:
+    console:
+      enabled: true
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    generate-ddl: false
     hibernate:
       ddl-auto: validate
-    properties:
-      hibernate:
-        default_schema: ${DB_SCHEMA:curricula_service}
-    show-sql: false
+      database-platform: org.hibernate.dialect.H2Dialect
 server:
   port: 1910
 ---
