--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,16 @@ version: 2.1
 
 jobs:
   build:
+    branches:
+      only:
+        - dev
     docker:
       - image: 'circleci/openjdk:8-jdk'
     steps:
       - checkout
+      - run:
+          name: Move to right directory
+          command: cd ./CurriculaService
       - run:
           name: Analyze on SonarCloud
           command: mvn verify sonar:sonar
