--- a/CurriculaService/pom.xml
+++ b/CurriculaService/pom.xml
@@ -17,8 +17,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<sonar.projectKey>CurriculaService</sonar.projectKey>
-		<sonar.organization>revaturelabs</sonar.organization>
+		<sonar.projectKey>revaturelabs_Curricula-Service</sonar.projectKey>
+		<sonar.organization>revaturelabs-screenforce</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
