--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ jobs:
           name: Analyze on SonarCloud
           command: |
            cd ./CurriculaService
-           mvn test sonar:sonar
+           mvn test 
+           mvn sonar:sonar
 
 workflows:
   main:
