Pulled from dev

--- a/CurriculaService/src/main/resources/application.yml
+++ b/CurriculaService/src/main/resources/application.yml
@@ -44,4 +44,4 @@ spring:
         default_schema: ${DB_SCHEMA:curricula_service}
     show-sql: false
 server:
-  port: 8080   
+  port: 8080  servlet:    context-path: /vis
